k8s/media-services/stash/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: stash
  namespace: media-services
  labels:
    app: stash
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: stash
